--- a/Dockerfile-alt
+++ b/Dockerfile-alt
@@ -1,20 +1,23 @@
 FROM ubuntu:14.04
-MAINTAINER Thomas VIAL
+MAINTAINER None
 
 # Packages
-RUN DEBIAN_FRONTEND=noninteractive apt-get update -q --fix-missing && \
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update -q --fix-missing && \
   apt-get -y upgrade && \
+  echo "Europe/Moscow" > /etc/timezone && \
+  dpkg-reconfigure -f noninteractive tzdata && \
   apt-get -y install --no-install-recommends \
     amavisd-new \
     arj \
     bzip2 \
-    clamav \
-    clamav-daemon \
+#    clamav \
+#    clamav-daemon \
     curl \
     dovecot-core \
     dovecot-imapd \
     dovecot-managesieved \
-    dovecot-pop3d \
+    dovecot-lmtpd\
     dovecot-sieve \
     ed \
     fail2ban \
@@ -39,9 +42,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -q --fix-missing && \
     && \
   curl -sk http://neuro.debian.net/lists/trusty.de-m.libre > /etc/apt/sources.list.d/neurodebian.sources.list && \
   apt-key adv --recv-keys --keyserver hkp://pgp.mit.edu:80 0xA5D32F012649A5A9 && \
-  curl https://packages.elasticsearch.org/GPG-KEY-elasticsearch | apt-key add - && \
-  echo "deb http://packages.elastic.co/beats/apt stable main" | tee -a /etc/apt/sources.list.d/beats.list && \
-  apt-get update -q --fix-missing && apt-get -y upgrade fail2ban filebeat && \
+#  curl https://packages.elasticsearch.org/GPG-KEY-elasticsearch | apt-key add - && \
+#  echo "deb http://packages.elastic.co/beats/apt stable main" | tee -a /etc/apt/sources.list.d/beats.list && \
+  apt-get update -q --fix-missing && apt-get -y upgrade fail2ban && \
   apt-get autoclean && rm -rf /var/lib/apt/lists/* && \
   rm -rf /usr/share/locale/* && rm -rf /usr/share/man/* && rm -rf /usr/share/doc/*
 
@@ -55,8 +58,8 @@ COPY target/dovecot/??-*.conf /etc/dovecot/conf.d/
 RUN sed -i -r 's/^(CRON)=0/\1=1/g' /etc/default/spamassassin
 
 # Enables Amavis
-RUN sed -i -r 's/#(@|   \\%)bypass/\1bypass/g' /etc/amavis/conf.d/15-content_filter_mode
-RUN adduser clamav amavis && adduser amavis clamav
+#RUN sed -i -r 's/#(@|   \\%)bypass/\1bypass/g' /etc/amavis/conf.d/15-content_filter_mode
+#RUN adduser clamav amavis && adduser amavis clamav
 RUN useradd -u 5000 -d /home/docker -s /bin/bash -p $(echo docker | openssl passwd -1 -stdin) docker
 
 # Configure Fail2ban
@@ -65,8 +68,8 @@ COPY target/fail2ban/filter.d/dovecot.conf /etc/fail2ban/filter.d/dovecot.conf
 RUN echo "ignoreregex =" >> /etc/fail2ban/filter.d/postfix-sasl.conf
 
 # Enables Clamav
-RUN (crontab; echo "0 0,6,12,18 * * * /usr/bin/freshclam --quiet") | sort - | uniq - | crontab -
-RUN chmod 644 /etc/clamav/freshclam.conf && freshclam
+#RUN (crontab; echo "0 0,6,12,18 * * * /usr/bin/freshclam --quiet") | sort - | uniq - | crontab -
+#RUN chmod 644 /etc/clamav/freshclam.conf && freshclam
 
 # Enables Pyzor and Razor
 USER amavis
@@ -92,14 +95,14 @@ COPY target/postfix/main.cf target/postfix/master.cf /etc/postfix/
 # Configuring Logs
 RUN sed -i -r "/^#?compress/c\compress\ncopytruncate" /etc/logrotate.conf && \
   mkdir -p /var/log/mail && chown syslog:root /var/log/mail && \
-  touch /var/log/mail/clamav.log && chown -R clamav:root /var/log/mail/clamav.log && \
-  touch /var/log/mail/freshclam.log &&  chown -R clamav:root /var/log/mail/freshclam.log && \
+#  touch /var/log/mail/clamav.log && chown -R clamav:root /var/log/mail/clamav.log && \
+#  touch /var/log/mail/freshclam.log &&  chown -R clamav:root /var/log/mail/freshclam.log && \
   sed -i -r 's|/var/log/mail|/var/log/mail/mail|g' /etc/rsyslog.d/50-default.conf && \
   sed -i -r 's|;auth,authpriv.none|;mail.none;mail.error;auth,authpriv.none|g' /etc/rsyslog.d/50-default.conf && \
-  sed -i -r 's|LogFile /var/log/clamav/|LogFile /var/log/mail/|g' /etc/clamav/clamd.conf && \
-  sed -i -r 's|UpdateLogFile /var/log/clamav/|UpdateLogFile /var/log/mail/|g' /etc/clamav/freshclam.conf && \
-  sed -i -r 's|/var/log/clamav|/var/log/mail|g' /etc/logrotate.d/clamav-daemon && \
-  sed -i -r 's|/var/log/clamav|/var/log/mail|g' /etc/logrotate.d/clamav-freshclam && \
+#  sed -i -r 's|LogFile /var/log/clamav/|LogFile /var/log/mail/|g' /etc/clamav/clamd.conf && \
+#  sed -i -r 's|UpdateLogFile /var/log/clamav/|UpdateLogFile /var/log/mail/|g' /etc/clamav/freshclam.conf && \
+#  sed -i -r 's|/var/log/clamav|/var/log/mail|g' /etc/logrotate.d/clamav-daemon && \
+#  sed -i -r 's|/var/log/clamav|/var/log/mail|g' /etc/logrotate.d/clamav-freshclam && \
   sed -i -r 's|/var/log/mail|/var/log/mail/mail|g' /etc/logrotate.d/rsyslog
 
 # Get LetsEncrypt signed certificate
@@ -116,6 +119,5 @@ EXPOSE 25 587 143 993 110 995 4190
 CMD /usr/local/bin/start-mailserver.sh
 
 
-ADD target/filebeat.yml.tmpl /etc/filebeat/filebeat.yml.tmpl
-
-
+#ADD target/filebeat.yml.tmpl /etc/filebeat/filebeat.yml.tmpl
+ENV DEBIAN_FRONTEND teletype
